--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Chocolate Cake</h1>
-    <img src="C:\Users\Y.SHARMILI\OneDrive\Desktop\chocolate-cake.jpg" alt="Chocolate Cake" class="recipe-img"/>
+    <img src="chocolate-cake.jpg" alt="Chocolate Cake" class="recipe-img"/>
 <div class="video-section">
   <h2>🍽️ Watch the Recipe</h2>
   <iframe 
